--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "lint": "eslint . --fix --cache",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "seed": "tsx src/seed/index.ts"
   },
   "keywords": [],
   "author": "Ricardo Vethencourt",
